test/good/sets/spread04.px

a = [4]

class A def
    x: {Float?} = {...a}

print A().x.pop() ?? 0
