test/bad/nullables/op11.px

class A def
    Int x

A? a = A()
a?.y
